PARTIAL COMMIT: DONE TRAINING SIDE. NEXT MODULE IS PROFILE SIDE

--- a/public/template/css/custom-styles.css
+++ b/public/template/css/custom-styles.css
@@ -12,6 +12,7 @@
 /* Show the delete button on hover */
 .event-wrapper:hover .delete-button {
     display: inline-block;
+    cursor: pointer;
 }
 
 .spinner-container {
